fixed background image, overflow-x, refocus text input after clicking button

--- a/style.css
+++ b/style.css
@@ -9,19 +9,24 @@
   box-sizing: border-box;
 }
 html {
+  background-color: black;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 .html--bg {
-  object-fit: cover;
   z-index: -5;
   position: absolute;
+  object-fit: cover;
+  object-position: center;
   top: 0;
   left: 0px;
   width: calc(100% + 30px);
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 body {
   margin: 0;
